[gd_scene load_steps=3 format=3 uid="uid://nppohon3v7gw"]

[ext_resource type="Script" uid="uid://bslw3pen05blw" path="res://MenusScripts/GraphicsMenu.gd" id="1_2dk4r"]
[ext_resource type="Texture2D" uid="uid://d1xa2ofcnjcxc" path="res://icon.svg" id="2_t15cd"]

[node name="Graphics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2dk4r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1159.0
offset_bottom = 657.0
texture = ExtResource("2_t15cd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 646.0
color = Color(0, 0, 0, 0.027451)

[node name="ScreenLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 327.0
offset_top = 119.0
offset_right = 520.0
offset_bottom = 152.0
text = "Screen Format"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreenButton" type="Button" parent="ScreenLabel"]
layout_mode = 0
offset_left = 214.0
offset_right = 306.0
offset_bottom = 31.0
text = "Full Screen"

[node name="FullScreenButton2" type="Button" parent="ScreenLabel"]
layout_mode = 0
offset_left = 321.0
offset_top = 1.0
offset_right = 413.0
offset_bottom = 32.0
text = "Window"

[node name="VSyncLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 327.0
offset_top = 164.0
offset_right = 520.0
offset_bottom = 197.0
text = "VSync"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OnButton" type="Button" parent="VSyncLabel"]
layout_mode = 0
offset_left = 249.0
offset_top = 1.0
offset_right = 306.0
offset_bottom = 32.0
text = "On"

[node name="OffButton" type="Button" parent="VSyncLabel"]
layout_mode = 0
offset_left = 322.0
offset_top = 1.0
offset_right = 379.0
offset_bottom = 32.0
text = "Off"

[node name="BrightnessLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 205.0
offset_right = 521.0
offset_bottom = 238.0
text = "Brightness"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HScrollBar" type="HScrollBar" parent="BrightnessLabel"]
layout_mode = 0
offset_left = 184.0
offset_top = 9.0
offset_right = 440.0
offset_bottom = 26.0
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 501.0
offset_top = 27.0
offset_right = 691.0
offset_bottom = 57.0
text = "Graphics"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -101.0
offset_right = -353.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="ApplyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 515.0
offset_top = 549.0
offset_right = 646.0
offset_bottom = 583.0
text = "Apply"

[connection signal="pressed" from="ScreenLabel/FullScreenButton" to="." method="_on_full_screen_button_pressed"]
[connection signal="pressed" from="ScreenLabel/FullScreenButton2" to="." method="_on_full_screen_button_2_pressed"]
[connection signal="pressed" from="VSyncLabel/OnButton" to="." method="_on_on_button_pressed"]
[connection signal="pressed" from="VSyncLabel/OffButton" to="." method="_on_off_button_pressed"]
[connection signal="value_changed" from="BrightnessLabel/HScrollBar" to="." method="_on_h_scroll_bar_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ApplyButton" to="." method="_on_apply_button_pressed"]
